# django-event

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.docker/.volumes/postgres/data/: postmaster.pid
.docker/.volumes/postgres/data/base/13776/: 2619
.docker/.volumes/postgres/data/base/13777/: pg_internal.init
.docker/.volumes/postgres/data/global/: 1260  pg_control  pg_internal.init
.docker/.volumes/postgres/data/pg_stat_tmp/: global.stat
djangoevent/: settings.py  urls.py
events/: admin.py  admin_filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
events/migrations/: 0001_initial.py  0002_alter_category_options_alter_event_options_and_more.py
events/templates/: base.html
events/templates/admin/: update_category.html
events/tests/: test_views.py
